SERVER-31436 dropDatabase ensures writes are still accepted before finishing database drop